# api-chat-and-message

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
chat/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
chat/migrations/: 0001_initial.py
config/: settings.py  urls.py
